Arreglo estilos en detalles

--- a/pages/detail.html
+++ b/pages/detail.html
@@ -32,7 +32,7 @@
     <title>ShopiCaC - Detalles del productos 👕</title>
   </head>
 
-  <body class="productos">
+  <body class="detalles">
     <header>
       <nav
         class="fixed-top navbar navbar-expand-md navbar-dark bd-navbar bg-dark bg-gradient bg-opacity-75 bg-blur"
@@ -85,7 +85,7 @@
       </nav>
     </header>
 
-    <main class="container">
+    <main>
       <!-- theme selector -->
       <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
         <symbol id="check2" viewBox="0 0 16 16">
@@ -182,9 +182,12 @@
         </ul>
       </div>
       <!-- theme selector -->
+
+
+      <h2>Detalles del producto</h2>
       <div id="card-detalles" class="card mb-3"></div>
 
-      <div class="">
+      <div>
         <button id="botonVolver" class="btn btn-outline-danger">
           <i class="bi bi-caret-left"></i>
           Volver
