--- a/pages/login.html
+++ b/pages/login.html
@@ -30,7 +30,7 @@
   <body>
     <header id="idheader"></header>
 
-    <main>
+    <main class="py-5">
       <!-- theme selector -->
       <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
         <symbol id="check2" viewBox="0 0 16 16">
@@ -129,42 +129,61 @@
 
       <!-- formulario login -->
 
-      <div class="form-contenedor-externo">
-        <form id="login-form" method="POST" target=".com">
-          <h2>Iniciar sesión</h2>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-sm-10 col-md-8 col-lg-5">
+            <div class="card shadow-sm form-contenedor-externo">
+              <div class="card-body p-4 p-md-5">
+                <h2 class="text-center mb-4">Iniciar sesión</h2>
 
-          <div class="form-contenedor-interno">
-            <div class="form">
-              <input
-                id="inputUsuario"
-                type="text"
-                class="formu-input usuario-input"
-                name="inputUsuario"
-                placeholder="Usuario"
-              >
+                <form id="login-form" method="POST" target=".com" class="needs-validation" novalidate>
+                  <div class="form-contenedor-interno mb-3">
+                    <div class="mb-3">
+                      <label for="inputUsuario" class="form-label">Usuario</label>
+                      <input
+                        id="inputUsuario"
+                        type="text"
+                        class="form-control formu-input usuario-input"
+                        name="inputUsuario"
+                        placeholder="Usuario"
+                        required
+                      >
+                    </div>
+                    <div class="mb-2">
+                      <label for="inputContrasena" class="form-label">Contraseña</label>
+                      <input
+                        id="inputContrasena"
+                        type="password"
+                        class="form-control formu-input pass-input"
+                        name="inputContrasena"
+                        placeholder="Contraseña"
+                        required
+                      >
+                    </div>
+                  </div>
+
+                  <div class="d-flex justify-content-between align-items-center olvido-contrasena mb-3">
+                    <div class="form-check">
+                      <input class="form-check-input checkbox-input" type="checkbox" id="recordarCheck">
+                      <label class="form-check-label" for="recordarCheck">
+                        Recordar
+                      </label>
+                    </div>
+                    <a href="#" class="small">¿Olvidó la contraseña?</a>
+                  </div>
+
+                  <button type="submit" class="btn btn-primary w-100 login-button mb-3">
+                    Iniciar sesión
+                  </button>
+
+                  <div class="text-center registro-link">
+                    <p class="mb-0">¿No tiene cuenta? <a href="#">Crear cuenta</a></p>
+                  </div>
+                </form>
+              </div>
             </div>
-            <div class="form">
-              <input
-                id="inputContrasena"
-                type="text"
-                class="formu-input pass-input"
-                name="inputContrasena"
-                placeholder="Contraseña"
-              >
-            </div>
           </div>
-          <div class="olvido-contrasena">
-            <label
-              ><input type="checkbox" class="checkbox-input"> Recordar</label
-            ><a href="#">Olvidó la Contraseña?</a>
-          </div>
-
-          <button type="submit" class="login-button">Iniciar sesión</button>
-
-          <div class="registro-link">
-            <p>No tiene cuenta? <a href="#">Crear cuenta</a></p>
-          </div>
-        </form>
+        </div>
       </div>
     </main>
 
