--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
   <!-- FIN PRODUCTOS -->
   <!-- footer 1 con bootstrap -->
 
-  <footer id="footer" class="footer-dark bd-footer bg-dark bg-gradient bg-opacity-75 bg-blur">
+  <footer id="footer" class="footer-dark bd-footer bg-dark bg-gradient bg-opacity-75 bg-blur py-4">
     <div class="container">
       <div class="row gy-4 align-items-start">
 
