--- a/pages/detail.html
+++ b/pages/detail.html
@@ -200,28 +200,9 @@
 
     <footer
       id="footer"
-      class="footer-dark bd-footer bg-dark bg-gradient bg-opacity-75 bg-blur"
+      class="footer-dark bd-footer bg-dark bg-gradient bg-opacity-75 bg-blur py-4"
     >
-      <div class="container footer-container">
-        <div class="py-2">
-          <!-- Adjusted padding -->
-          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item btn-width border-2">
-              <a href="#" class="nav-link px-2 text-white-50">Inicio</a>
-            </li>
-            <li class="nav-item btn-width border-2">
-              <a href="#" class="nav-link px-2 text-white-50">Productos</a>
-            </li>
-            <li class="nav-item btn-width border-2">
-              <a href="#" class="nav-link px-2 text-white-50">Contacto</a>
-            </li>
-            <li class="nav-item btn-width border-2">
-              <a href="#" class="nav-link px-2 text-white-50">Login</a>
-            </li>
-          </ul>
-          <p class="text-center text-white-50">© 2024 ShopiCaC, Inc</p>
-        </div>
-      </div>
+    
     </footer>
 
     <script type="module" src="../assets/js/detalles.js"></script>
@@ -229,5 +210,6 @@
 
     <!-- JS Bootstrap -->
     <script src="../assets/js/js-bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="../assets/js/footer.js"></script>
   </body>
 </html>
