--- a/pages/products.html
+++ b/pages/products.html
@@ -232,7 +232,7 @@
     <!-- footer 1 con bootstrap -->
     <footer
       id="idfooter"
-      class="footer-dark bd-footer bg-dark bg-gradient bg-opacity-75 bg-blur"
+      class="footer-dark bd-footer bg-dark bg-gradient bg-opacity-75 bg-blur py-4"
     ></footer>
 
     <script type="module" src="../assets/js/productos.js"></script>
