--- a/pages/login.html
+++ b/pages/login.html
@@ -190,7 +190,7 @@
     <!-- footer 1 con bootstrap -->
     <footer
       id="idfooter"
-      class="footer-dark bd-footer bg-dark bg-gradient bg-opacity-75 bg-blur">
+      class="footer-dark bd-footer bg-dark bg-gradient bg-opacity-75 bg-blur py-4">
     </footer>
     <!-- JS Bootstrap -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
